[package]
name = "dnsrelay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
netlink-packet = "0.1.1"
netlink-packet-sock-diag = "0.4.0"
netlink-sys = "0.8.3"

[profile.release]
lto = true
opt-level = "z"